# abcd-pyhf

./: LICENSE  README.md  setup.cfg
.github/workflows/: dependencies-head.yml  python-package.yml
src/abcd_pyhf/: __init__.py  abcd.py  pool_utils.py  pyhf_util.py
tests/: test_ABCD.py
