[metadata]
name = abcd-pyhf
version = 0.0.2
author = Mason Proffitt
author_email = masonlp@uw.edu
description = pyhf implementation of the ABCD method for background estimation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/masonproffitt/abcd-pyhf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    matplotlib
    pyhf[contrib]>=0.6.0
    iminuit

[options.packages.find]
where = src
