[metadata]
name = abcd-pyhf
version = 0.0.7
author = Mason Proffitt
author_email = masonlp@uw.edu
description = pyhf implementation of the ABCD method for background estimation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/masonproffitt/abcd-pyhf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    pyhf[contrib,minuit]>=0.7

[options.extras_require]
test =
    flake8
    pytest

[options.packages.find]
where = src
